# property-tools-sa

./: .gitignore  README.md  app.py  build_polygon.py  map_points_vs_polygon.py  pyproject.toml  requirements.txt  test_areas.py  test_google_api.py  test_hybrid.py  test_step2.py  tmp_print_app_py.ps1
data/: input.csv  north_checkpoints.txt  north_polygon.json
src/: area_filters.py  geocode.py  geocode_hybrid.py  io_utils.py  pdf_extractor.py  pipeline.py  polygon_tools.py  property_enrichment.py
